# crapsecrets

./: README.md  pyproject.toml
crapsecrets/: __init__.py  base.py  helpers.py
crapsecrets/examples/: blacklist3r.py  cli.py  symfony_knownkey.py  telerik_knownkey.py
crapsecrets/modules/: aspnet_resource.py  aspnet_viewstate.py  aspnet_vstate.py  django_signedcookies.py  express_signedcookies_cs.py  express_signedcookies_es.py  flask_signedcookies.py  generic_jwt.py  jsf_viewstate.py  laravel_signedcookies.py  peoplesoft_pstoken.py  rack2_signedcookies.py  rails_secretkeybase.py  symfony_signedurl.py  telerik_encryptionkey.py  telerik_hashkey.py
tests/: rack2_signedcookies_test.py
