[tool.poetry]
name = "crapsecrets"
version = "1337.8.13"
description = "About"
authors = ["A library for detecting known or weak secrets on across many platforms. Forked from badsecrets 0.7.0."]
license = "GPL-3.0"
readme = "README.md"
packages = [
    {include = "crapsecrets"},
    {include = "libs"}
]
include = [
    "crapsecrets/resources/*.txt"
]

[tool.poetry.dev-dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
mock = "^5.2.0"
pytest-mock = "^3.14.0"
poetry-dynamic-versioning = {extras = ["plugin"], version = "^1.4.1"}

[tool.poetry.dependencies]
python = "^3.10"
pycryptodome = "^3.23.0"
flask-unsign = "^1.2.1"
Django = "^5.2.1"
pyjwt = {extras = ["crypto"], version = "2.10.1"}
colorama = "^0.4.6"
httpx = "^0.28.1"
respx = "^0.22.0"
toml = "^0.10.2"

[tool.poetry.scripts]
crapsecrets = 'crapsecrets.examples.cli:main'
telerik-knownkey = 'crapsecrets.examples.telerik_knownkey:main'
symfony-knownkey = 'crapsecrets.examples.symfony_knownkey:main'

[tool.black]
line-length = 119

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true
metadata = true
format = 'v1337.7.{distance}'
